Trying to solve text-jump problem

--- a/style/main.css
+++ b/style/main.css
@@ -35,7 +35,7 @@
 }
 
 #photo-banner-img {
-    height: 530px;
+    height: 500px;
 }
 
 .slogan {
